Fixed config for jar release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,9 @@ application {
     // Define the main class for the application.
     mainClass = 'MailClient.App'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'ActionTest.App'
+    }
+}
