--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,9 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+
+    // jpackage plugin
+    id "org.panteleyev.jpackageplugin" version "1.3.0"
 }
 
 repositories {
@@ -29,6 +32,14 @@ application {
     mainClass = 'MailClient.App'
 }
 
+// Check java version
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+// executable jar
 jar {
     manifest {
         attributes 'Main-Class': 'MailClient.App'
