Dev Branch commit, working on receiving mails via POP

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    // Java mail dependency
+    implementation 'com.sun.mail:javax.mail:1.6.2'
+}
+
+test {
+    useJUnit();
 }
 
 application {
