--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,12 @@ test {
     useJUnit();
 }
 
+// Main class name
+mainClassName = 'MailClient.App'
+
 application {
     // Define the main class for the application.
-    mainClass = 'MailClient.App'
+    mainClass = "$mainClassName"
 }
 
 // Check java version
@@ -49,6 +52,8 @@ java {
 // executable jar
 jar {
     manifest {
-        attributes 'Main-Class': 'MailClient.App'
+        attributes 'Main-Class': "$mainClassName"
     }
+
+    from { configurations.compile.collect {it.isDirectory() ? it : zipTree(it)} }
 }
