build.gradle jar dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,12 @@ java {
 // executable jar
 jar {
     manifest {
-        attributes 'Main-Class': "$mainClassName"
+        attributes(
+                'Main-Class': "$mainClassName"
+        )
     }
 
-    from { configurations.compile.collect {it.isDirectory() ? it : zipTree(it)} }
+    from {
+        configurations.runtimeClasspath.collect {it.isDirectory() ? it : zipTree(it)}
+    }
 }
