--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,18 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 
-    // Java mail dependency
+    // Java mail
     implementation 'com.sun.mail:javax.mail:1.6.2'
+
+    // Java FileUtils
+    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
+
+    // Java AppDirs to store files in local files on any systems
+    implementation 'net.harawata:appdirs:1.2.1'
 }
 
 test {
-    useJUnit();
+    useJUnit()
 }
 
 application {
@@ -47,6 +53,7 @@ java {
 }
 
 // executable jar
+// TODO may be depreciated, see latest
 jar {
     manifest {
         attributes 'Main-Class': 'MailClient.App'
