--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,7 +39,7 @@ jobs:
         # Git tag (for automatic releases)
         automatic_release_tag: latest
         # Should this release be marked as a pre-release?
-        prerelease: false
+        prerelease: true
         # Release title (for automatic releases)
         title: MailClient
         # Assets to upload to the release
